--- a/Examples/SessionTools-macOSExample/Base.lproj/Main.storyboard
+++ b/Examples/SessionTools-macOSExample/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -104,7 +103,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="helloLabel" destination="S5Y-tR-srt" id="wSo-zs-GIZ"/>
+                        <outlet property="helloTextField" destination="S5Y-tR-srt" id="wSo-zs-GIZ"/>
                         <outlet property="loginButton" destination="iIR-SJ-4Zj" id="2ZQ-DH-lLq"/>
                         <outlet property="refreshButton" destination="YIj-dU-ymG" id="zOk-ZY-snR"/>
                     </connections>
